# shape_experiment

./: README.md  tmp_phero.txt
src/: CMakeLists.txt
src/examples/behaviors/: CMakeLists.txt  blink_led.c  lab_disperse.c  lab_foraging.c  lab_gradient.c  lab_lampe_hypo.c  lab_listener.c  lab_listener_mod.c  lab_speaker.c  lab_speaker_mod.c  lab_testDivers.c  move_to_light.c  orbit_planet_message.c  orbit_star_message.c  shape_experiment.c  shape_formation.c  simple_movement.c
src/examples/experiments/: kilobot_move_to_light.argos  kilobot_orbit_message.argos  kilobot_speaker_listener.argos  kilobot_trajectory.argos  lab_communication.argos  lab_communication_mod.argos  lab_disperse.argos  lab_foraging_without_obstacle.argos  lab_gradient.argos  lab_lampe_hypo.argos  lab_testDivers.argos  lab_u.argos  shape_experiment.argos
src/examples/loop_functions/: CMakeLists.txt
src/examples/loop_functions/ARKloopfunction/: CMakeLists.txt  ark_experiment2.cpp  ark_experiment2.h
src/examples/loop_functions/shape_loop_functions/: shape_formation.cpp  shape_formation.h
src/examples/loop_functions/trajectory_loop_functions/: trajectory_loop_functions.cpp  trajectory_loop_functions.h
src/plugins/robots/kilobot/control_interface/: ci_kilobot_communication_actuator.cpp  kilolib.h  message.h  message_crc.c  message_crc.h
